# Moradabad-OS

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 48762f8fd95a_initial_schema.py  c5d0a7f0b9d4_llm_calls_table.py
config/: dfm_rules.yaml  labor_rates.yaml
src/mos/: config.py
src/mos/api/: app.py
src/mos/cad/: __init__.py  dfm.py  rules.py  runner.py
src/mos/cost/: __init__.py  cached_source.py  engine.py  http_source.py  rates.py  sources.py
src/mos/db/: __init__.py  models.py  repository.py  session.py
src/mos/intent/: __init__.py  client.py  pipeline.py  prompt.py
src/mos/render/: __init__.py  blender_script.py  runner.py
src/mos/schemas/: __init__.py  common.py  cost_sheet.py  design_spec.py  feedback.py  job.py  (+1 more)
tests/integration/: conftest.py  test_api_pipeline.py  test_feedback_api.py  test_intent_api.py  test_job_repository.py  test_metal_rate_repository.py  test_render_blender.py
tests/unit/: builders.py  test_archetype_batch.py  test_cached_metal_rate_source.py  test_cad_runner.py  test_common_and_material.py  test_cost_engine.py  test_cost_sheet.py  test_design_spec.py  test_dfm.py  test_feedback.py  test_feedback_repository_conversion.py  test_http_metal_rate_source.py  test_intent_client.py  test_intent_pipeline.py  test_intent_prompt.py  test_job.py  test_manufacturability.py  test_render_pipeline_stage.py  test_render_runner.py  test_repository_conversion.py  test_sop_pdfs.py  test_sop_pipeline_stage.py  test_sop_routing.py  test_storage.py  test_templates.py
(+27 files in other folders)
